infra/environment-up-docker/terraform2/security_groups.tf
resource "aws_security_group" "sg_blockchain" {
  name        = "${var.prefix}-sg-blockchain"
  description = "Security group for blockchain"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8545
    to_port     = 8545
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  # Adjust as needed
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]  # Allow all outbound traffic
  }

  vpc_id = aws_vpc.vpc_blockchain.id
}
